<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NfcOrienteering</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to NFC-Orienteering</string>
    <string name="info_text">To start an event follow the instructions below.</string>
    <string name="instructions1_text">1. Go to the starting point of the event.</string>
    <string name="instructions2_text">2. Press Start Event -button.</string>
    <string name="instructions3_text">3. Read the RFID-tag located at the starting point with your phone\'s NFC-reader.</string>
    <string name="instructions4_text">4. Application will load the orienteering map and information for you and you can start the chosen track.</string>
    <string name="startButton_text">Start Event!</string>
    <string name="title_activity_read_track_tag">NFC-Orienteering</string>
    <string name="readTagInfo_text">Read the RFID-tag of the track you want to perform
        with your smart phone\'s NFC-reader by touching the tag with your phone\'s backcover.  </string>
    <string name="downloadMap_info">Tag read successfully! The map of the chosen track will now be downloaded</string>
    <string name="readTag_button">Next</string>
    <string name="title_activity_track_info">Chosen Track</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectOther_button">Select other track</string>
    <string name="selectThis_button">Select this track</string>
    <string name="trackLength_label">Track Length:</string>
    <string name="trackDifficulty_label">Difficulty:</string>
    <string name="availabilityFrom_label">Available from:</string>
    <string name="availabilityTo_label">Available to:</string>
    <string name="trackLength_text">0 km</string>
    <string name="trackDifficulty_text">Intermediate</string>
    <string name="availabilityFrom_text">00.00 00:00</string>
    <string name="availabilityTo_text">00.00 00:00</string>
    <string name="eventName_text">Event name</string>
    <string name="imageDescription">Image of the map could not be found</string>
    <string name="title_activity_active_orienteering_event">Active Event</string>
    <string name="activeEvent_text">Action bar should be added here later on.</string>
    <string name="next">Next</string>
    <string name="title_activity_track_results">Track Results</string>
    <string name="results_text">Track results</string>
    <string name="total_text">Total</string>
    <string name="noUpload_button">Don\'t upload results</string>
    <string name="upload_results_text">Uploading results</string>
    <string name="uploadInfo_text">You can upload your results to be shown in the overall results section
       								in the web page if you wish.</string>
    <string name="title_activity_upload_results">Upload your results</string>
    
    <string name="uploadResults_button">Upload Results</string>
    <string name="uploadResultsInfo_text">Give your nickname to be shown in the final results</string>
	<string name="menu_settings">Record</string>
	<string name="menu_quit">Quit Event</string>
	<string name="hide_compass">Hide Compass</string>
	
	<string name="addName_text">Add name</string>
	<string name="cancel_button">Cancel</string>
	<string name="next_button">Next</string>
	<string name="ok_button">OK</string>
	<string name="nickname_text">Nickname</string>
	<string name="tracks_text">Track</string>
	<string name="upload_text">Upload</string>
	<string name="see_result">See result</string>
	
	<string name="button_result">Result</string>
	<string name="button_help">Help</string>
	<string name="button_start">Start</string>
	<string name="button_back">Back</string>
	<string name="button_home">Home</string>
	<string name="button_upload">Upload</string>
	<string name="button_n_upload">Not Upload</string>
	<string name="button_other_track">Others</string>
	<string name="main_title">ORIENTEERING EVENT</string>
	<string name="track_name">Track name</string>
	<string name="track_length">Track length</string>
	<string name="track_level">Track level</string>
	<string name="text_finish">Finish!</string>
	<string name="text_score">Your score:</string>
	<string name="text_nfc">NFC</string>
	<string name="text_tag">tag</string>
	<string name="title_CP">Tagged Control Points</string>
	<string name="large_text">Large text</string>
	<string name="ok">OK</string>
	<string name="history">History</string>
	
	<string name="read_info_tag_nfc_animation">NFC is active</string>	
</resources>
