<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.uta.nfcorienteering.activity.TrackInfoActivity" 
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:orientation="horizontal"
    	android:layout_centerHorizontal="true"
        android:gravity="bottom" >
    <Button
        style="@style/LowButtons"
        android:background="@drawable/button"
        android:id="@+id/selectOtherButton"
        android:text="@string/button_other_track"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:onClick="readOtherTag" />

    <Button
        style="@style/LowButtons"
        android:background="@drawable/button"
        android:id="@+id/selectThisButton"
        android:text="@string/button_start"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:onClick="startOrienteeringActivity" 
        />
</LinearLayout>
    <TextView
        style="@style/Name"
        android:id="@+id/eventNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/eventName_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        style="@style/Name"
        android:id="@+id/trackDifficultyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/trackLengthLabel"
        android:layout_below="@+id/trackLengthLabel"
        android:layout_marginTop="16dp"
        android:text="@string/trackDifficulty_label"
        android:textStyle="bold" />

    <TextView
        style="@style/Name"
        android:id="@+id/trackLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear"
        android:layout_below="@+id/eventNameText"
        android:layout_marginTop="40dp"
        android:text="@string/trackLength_label"
        android:textStyle="bold" />

    <TextView
        style="@style/Name"
        android:id="@+id/availabilityFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trackDifficultyLabel"
        android:layout_marginTop="16dp"
        android:text="@string/availabilityFrom_label"
        android:textStyle="bold" />

    <TextView
        style="@style/Name"
        android:id="@+id/availabilityToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/availabilityFromLabel"
        android:layout_below="@+id/availabilityFromLabel"
        android:layout_marginTop="16dp"
        android:text="@string/availabilityTo_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/availableToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/availabilityToLabel"
       android:layout_toRightOf="@+id/availabilityToLabel"
        android:layout_alignBottom="@+id/availabilityToLabel"
        
        android:text="@string/availabilityTo_text" 
        />

    <TextView
        android:id="@+id/availableFromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/availabilityToLabel"
        android:layout_toRightOf="@+id/availabilityFromLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/availabilityFrom_text" />

    <TextView
        android:id="@+id/trackDifficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/availabilityFromLabel"
        android:layout_marginLeft="40dp"
        android:text="@string/trackDifficulty_text" 
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/trackLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trackDifficultyLabel"
        android:layout_alignLeft="@+id/trackDifficultyText"
        android:layout_marginLeft="40dp"
        android:text="@string/trackLength_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/availableToText"
        android:layout_alignLeft="@+id/linear"
        android:layout_alignRight="@+id/linear"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >
        
        <ImageView
	      android:id="@+id/mapImage"
	      android:contentDescription="@string/imageDescription"
	      android:layout_width="fill_parent"
	      android:layout_height="fill_parent" 
	      android:scaleType="center"/>
        

    </LinearLayout>

</RelativeLayout>
