<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.uta.nfcorienteering.activity.TrackResultsActivity" >

    <TextView
        android:id="@+id/resultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/results_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/noUploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToStartMenu"
        android:text="@string/noUpload_button" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/noUploadButton"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/noUploadButton"
        android:onClick="uploadResults"
        android:text="@string/upload_button" />

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/uploadInfoText"
                android:layout_below="@+id/trackLengthText"
                android:paddingTop="50dp"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/resultTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" >
                </TableLayout>
            </RelativeLayout>

    
    <!--  <TableLayout
        android:id="@+id/resultTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultsText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" >


    </TableLayout>-->



    <TextView
        android:id="@+id/uploadInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/noUploadButton"
        android:layout_alignLeft="@+id/noUploadButton"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/uploadInfo_text" />

    <TextView
        android:id="@+id/trackLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventNameText"
        android:layout_alignBottom="@+id/eventNameText"
        android:layout_alignLeft="@+id/uploadButton"
        android:layout_marginLeft="38dp"
        android:text="@string/trackLength_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/eventNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultsText"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/trackLengthText"
        android:text="@string/eventName_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>